@@ -66,9 +66,8 @@
 <!-- Word Intro -->
 
     <div class="container-fluid p-5 text-center mb-0" >
-            <img src="https://portfolio--bucket.s3.eu-north-1.amazonaws.com/my+pic.jpg" alt="" width="400px" height="400px" class="border rounded-pill" style="box-shadow: 0 0 10px hwb(200 15% 84%);">
             <br><br><br><br>
-            <h1 class="display-5 font-weight-bold">Designer, Full Stack Developer & Mentor</h1>
+            <h1 class="jersey-10-regular font-weight-bold" style="font-size: 75px;">Designer, Full Stack Developer & Mentor</h1>
             <br>
             <h3 class="dancing-script-lead">I design and build simple things and love what I do</h3>
             <br><br><br>
@@ -78,11 +77,21 @@
 
 <!-- Basic Intro -->
 
-    <div class="container-fluid p-5 text-center mb-0 text-dark" style="background-color: #F8787D;">
-        <h3 class="sedan-regular font-weight-bold display-4">Hi, I'm Yadu. Nice to meet you</h3>
-        <br><br>
-        <p class="sedan-regular-italic display-5">With 3 years of experience as a Python developer, I've specialized in building dynamic websites using Django and front-end tools. <br> My work includes designing and developing robust web applications and managing databases with PostgreSQL. <br> I'm passionate about coding, continuously honing my skills, and eager to tackle new challenges in the ever-evolving tech landscape.</p>
+<div class="container-fluid p-5  mb-0 text-dark" style="background-color: #F8787D;">
+    <div class="row ">
+
+        <div class="text-center col-lg-6 align-self-center">
+            <h3 class="sedan-regular font-weight-bold display-4">Hi, I'm Yadu. Nice to meet you</h3>
+            <br><br>
+            <p class="sedan-regular-italic display-5">With 3 years of experience as a Python developer, I've specialized in building dynamic websites using Django and front-end tools. <br> My work includes designing and developing robust web applications and managing databases with PostgreSQL. <br> I'm passionate about coding, continuously honing my skills, and eager to tackle new challenges in the ever-evolving tech landscape.</p>
+        </div>
+
+        <div class="col-lg-6 text-center">
+            <img src="https://portfolio--bucket.s3.eu-north-1.amazonaws.com/my+pic.jpg" alt="profile-image" width="400px" height="400px" class="border " style="box-shadow: 0 0 5px hwb(0 0% 100%); border-radius: 8px;">
+        </div>
+
     </div>
+</div>
 <!-- End of Basic Intro -->
 
 <!-- Academics -->
